qs
4.3 优化